[package]
name = "rlox"
version = "0.1.0"
authors = ["Emmabyte <me@emmabyte.de>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
strum = {version = "0.25", features = ["derive"]} # enum to string conversion
thiserror = "1.0.38"                             # error handling
ustr = "1.1.0"
